--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <h2 class="text"><span id="app">APP</span> STARTER</h2>
 
                 <ul class="list">
-                 
+                    <li id="nav"><a href="nav.html" class="hamburger"><img src="./images/icon-hamburger.svg"></a></li>
                     <li><a href="#">Contact</a></li>
                     <li><a href="#">Newsletter</a></li>
                     <li><a href="#">Pricing</a></li>
@@ -48,7 +48,7 @@
                     </h3>
                 <p class="blue">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae harum placeat ducimus deleniti soluta aut.</p>
 
-                <p class="white">Lorem ipsum dolor sit, <span id="white">amet consectetur </span>adipisicing elit. Earum minima, nam quaerat, nihil vel itaque do.</p>
+                <p class="white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae harum placeat ducimus deleniti soluta aut.</p>
 
             </div>
             <div class="rightimg">
